[build-system]
build-backend = "hatchling.build"
requires = [
    "hatchling",
    "hatch-nativelib",
    "hatch-robotpy",
    "native.wpiutil==2025.3.2",
    "native.wpinet==2025.3.2",
    "native.ntcore==2025.3.2",
]

[project]
name = "native.cscore"
version = "2025.3.2"
description = "WPILib Camera Library"
license = "BSD-3-Clause"

dependencies = [
    "native.wpiutil==2025.3.2",
    "native.wpinet==2025.3.2",
    "native.ntcore==2025.3.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/native"]

[[tool.hatch.build.hooks.robotpy.maven_lib_download]]
artifact_id = "cscore-cpp"
group_id = "edu.wpi.first.cscore"
repo_url = "https://frcmaven.wpi.edu/artifactory/release"
version = "2025.3.2"

extract_to = "src/native/cscore"
libs = ["cscore"]

[[tool.hatch.build.hooks.nativelib.pcfile]]
pcfile = "src/native/cscore/native.cscore.pc"
name = "cscore"

includedir = "src/native/cscore/include"
libdir = "src/native/cscore/lib"
shared_libraries = ["cscore"]
requires = ["native.wpiutil"]
