[build-system]
build-backend = "hatchling.build"
requires = [
    "hatchling",
    "hatch-nativelib",
    "hatch-robotpy",
    "native.wpiutil==2025.3.2",
    "native.wpinet==2025.3.2",
]

[project]
name = "native.ntcore"
version = "2025.3.2"
description = "WPILib NetworkTables Library"
license = "BSD-3-Clause"

dependencies = [
    "native.wpiutil==2025.3.2",
    "native.wpinet==2025.3.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/native"]

[[tool.hatch.build.hooks.robotpy.maven_lib_download]]
artifact_id = "ntcore-cpp"
group_id = "edu.wpi.first.ntcore"
repo_url = "https://frcmaven.wpi.edu/artifactory/release"
version = "2025.3.2"

extract_to = "src/native/ntcore"
libs = ["ntcore"]

[[tool.hatch.build.hooks.nativelib.pcfile]]
pcfile = "src/native/ntcore/native.ntcore.pc"
name = "ntcore"

includedir = "src/native/ntcore/include"
libdir = "src/native/ntcore/lib"
shared_libraries = ["ntcore"]
requires = ["native.wpinet", "native.wpiutil"]
