[build-system]
build-backend = "hatchling.build"
requires = [
    "hatchling",
    "hatch-nativelib",
    "hatch-robotpy",
    "native.wpilib==2025.3.2",
]

[project]
name = "native.romi"
version = "2025.3.2"
description = "WPILib Romi support library"
license = "BSD-3-Clause"

dependencies = [
    "native.wpilib==2025.3.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/native"]

[[tool.hatch.build.hooks.robotpy.maven_lib_download]]
artifact_id = "romiVendordep-cpp"
group_id = "edu.wpi.first.romiVendordep"
repo_url = "https://frcmaven.wpi.edu/artifactory/release"
version = "2025.3.2"

extract_to = "src/native/romi"
libs = ["romiVendordep"]

[[tool.hatch.build.hooks.nativelib.pcfile]]
pcfile = "src/native/romi/native.romi.pc"
name = "romi"

includedir = "src/native/romi/include"
libdir = "src/native/romi/lib"
shared_libraries = ["romiVendordep"]
requires = ["native.wpilib"]
