[build-system]
build-backend = "hatchling.build"
requires = [
    "hatchling",
    "hatch-nativelib",
    "hatch-robotpy",
    "native.wpiutil==2025.3.2",
]

[project]
name = "native.wpinet"
version = "2025.3.2"
description = "WPILib Networking Library"
license = "BSD-3-Clause"

dependencies = [
    "native.wpiutil==2025.3.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/native"]

[[tool.hatch.build.hooks.robotpy.maven_lib_download]]
artifact_id = "wpinet-cpp"
group_id = "edu.wpi.first.wpinet"
repo_url = "https://frcmaven.wpi.edu/artifactory/release"
version = "2025.3.2"

extract_to = "src/native/wpinet"
libs = ["wpinet"]

[[tool.hatch.build.hooks.nativelib.pcfile]]
pcfile = "src/native/wpinet/native.wpinet.pc"
name = "wpinet"

includedir = "src/native/wpinet/include"
libdir = "src/native/wpinet/lib"
shared_libraries = ["wpinet"]
requires = ["native.wpiutil"]
