[build-system]
build-backend = "hatchling.build"
requires = [
    "hatchling",
    "hatch-nativelib",
    "hatch-robotpy",
]

[project]
name = "native.wpiutil"
version = "2025.3.2"
description = "WPILib Utility Library"
license = "BSD-3-Clause"

dependencies = [
    "msvc-runtime>=14.42.34433; platform_system == 'Windows'"
]

[tool.hatch.build.targets.wheel]
packages = ["src/native"]

[[tool.hatch.build.hooks.robotpy.maven_lib_download]]
artifact_id = "wpiutil-cpp"
group_id = "edu.wpi.first.wpiutil"
repo_url = "https://frcmaven.wpi.edu/artifactory/release"
version = "2025.3.2"

extract_to = "src/native/wpiutil"
libs = ["wpiutil"]

[[tool.hatch.build.hooks.nativelib.pcfile]]
pcfile = "src/native/wpiutil/native.wpiutil.pc"
name = "wpiutil"

includedir = "src/native/wpiutil/include"
libdir = "src/native/wpiutil/lib"
shared_libraries = ["wpiutil"]
