[tool.robotpy-build.metadata]
name = "pyntcore"
description = "Binary wrappers for the FRC ntcore library"
author = "RobotPy Development Team"
author_email = "robotpy@googlegroups.com"
url = "https://github.com/robotpy/pyntcore"
license = "BSD-3-Clause"
install_requires = [
    "robotpy-wpiutil==THIS_VERSION",
    "robotpy-wpinet==THIS_VERSION",
]

[build-system]
requires = [
    "robotpy-build<2025.0.0b1,~=2025.0.0a1",
    "robotpy-wpiutil~=2024.3.1",
    "robotpy-wpinet~=2024.3.1",
]

[tool.robotpy-build]
base_package = "ntcore"
update_init = [
    "ntcore",
    "ntcore.meta ntcore._ntcore.meta"
]
scan_headers_ignore = [
    "networktables/ProtobufTopic.h",
    "networktables/UnitTopic.h",

    "ntcore.h",
    "ntcore_c.h",
    "ntcore_c_types.h",
    "ntcore_test.h",
]

[tool.robotpy-build.wrappers."ntcore".maven_lib_download]
artifact_id = "ntcore-cpp"
group_id = "edu.wpi.first.ntcore"
repo_url = "https://frcmaven.wpi.edu/artifactory/development"
version = "2025.1.1-beta-1"

libs = ["ntcore"]

[tool.robotpy-build.wrappers."ntcore"]
name = "ntcore"
sources = [
    "ntcore/src/ntcore.cpp",
    "ntcore/src/nt_instance.cpp",
    "ntcore/src/py2value.cpp",
    "ntcore/src/pyentry.cpp",
]

depends = ["wpiutil", "wpinet"]
generation_data = "gen"

[tool.robotpy-build.wrappers."ntcore".autogen_headers]
# networktables
BooleanArrayTopic = "networktables/BooleanArrayTopic.h"
BooleanTopic = "networktables/BooleanTopic.h"
DoubleArrayTopic = "networktables/DoubleArrayTopic.h"
DoubleTopic = "networktables/DoubleTopic.h"
FloatArrayTopic = "networktables/FloatArrayTopic.h"
FloatTopic = "networktables/FloatTopic.h"
GenericEntry = "networktables/GenericEntry.h"
IntegerArrayTopic = "networktables/IntegerArrayTopic.h"
IntegerTopic = "networktables/IntegerTopic.h"
MultiSubscriber = "networktables/MultiSubscriber.h"
NTSendable = "networktables/NTSendable.h"
NTSendableBuilder = "networktables/NTSendableBuilder.h"
NetworkTable = "networktables/NetworkTable.h"
NetworkTableEntry = "networktables/NetworkTableEntry.h"
NetworkTableInstance = "networktables/NetworkTableInstance.h"
NetworkTableListener = "networktables/NetworkTableListener.h"
NetworkTableType = "networktables/NetworkTableType.h"
NetworkTableValue = "networktables/NetworkTableValue.h"
RawTopic = "networktables/RawTopic.h"
StructTopic = "networktables/StructTopic.h"
StructArrayTopic = "networktables/StructArrayTopic.h"
StringArrayTopic = "networktables/StringArrayTopic.h"
StringTopic = "networktables/StringTopic.h"
Topic = "networktables/Topic.h"

ntcore_cpp = "ntcore_cpp.h"
ntcore_cpp_types = "ntcore_cpp_types.h"
