[build-system]
build-backend = "hatchling.build"
requires = [
    "semiwrap",
    "hatch-meson",
    "hatch-robotpy",
    "hatchling",
    "native.ntcore==2025.3.2",
    "robotpy-wpiutil~=2025.3.2",
    "robotpy-wpinet~=2025.3.2",
]


[project]
name = "pyntcore"
version = "2025.3.2.2"
description = "Binary wrappers for the FRC ntcore library"
authors = [
    {name = "RobotPy Development Team", email = "robotpy@googlegroups.com"},
]
license = "BSD-3-Clause"
dependencies = [
    "native.ntcore==2025.3.2",
    "robotpy-wpiutil~=2025.3.2",
    "robotpy-wpinet~=2025.3.2",
]

[project.urls]
"Source code" = "https://github.com/robotpy/mostrobotpy"


[tool.hatch.build.hooks.robotpy]
version_file = "ntcore/version.py"

[tool.hatch.build.hooks.semiwrap]

[tool.hatch.build.hooks.meson]


[tool.semiwrap]
update_init = [
    "ntcore",
    "ntcore.meta ntcore._ntcore.meta"
]
scan_headers_ignore = [
    "networktables/ProtobufTopic.h",
    "networktables/UnitTopic.h",

    "ntcore.h",
    "ntcore_c.h",
    "ntcore_c_types.h",
    "ntcore_test.h",

    "src/*",
]

[tool.semiwrap.extension_modules."ntcore._ntcore"]
name = "ntcore"
wraps = ["native.ntcore"]
depends = ["wpiutil", "wpinet"]


[tool.semiwrap.extension_modules."ntcore._ntcore".headers]
# networktables
BooleanArrayTopic = "networktables/BooleanArrayTopic.h"
BooleanTopic = "networktables/BooleanTopic.h"
DoubleArrayTopic = "networktables/DoubleArrayTopic.h"
DoubleTopic = "networktables/DoubleTopic.h"
FloatArrayTopic = "networktables/FloatArrayTopic.h"
FloatTopic = "networktables/FloatTopic.h"
GenericEntry = "networktables/GenericEntry.h"
IntegerArrayTopic = "networktables/IntegerArrayTopic.h"
IntegerTopic = "networktables/IntegerTopic.h"
MultiSubscriber = "networktables/MultiSubscriber.h"
NTSendable = "networktables/NTSendable.h"
NTSendableBuilder = "networktables/NTSendableBuilder.h"
NetworkTable = "networktables/NetworkTable.h"
NetworkTableEntry = "networktables/NetworkTableEntry.h"
NetworkTableInstance = "networktables/NetworkTableInstance.h"
NetworkTableListener = "networktables/NetworkTableListener.h"
NetworkTableType = "networktables/NetworkTableType.h"
NetworkTableValue = "networktables/NetworkTableValue.h"
RawTopic = "networktables/RawTopic.h"
StructTopic = "networktables/StructTopic.h"
StructArrayTopic = "networktables/StructArrayTopic.h"
StringArrayTopic = "networktables/StringArrayTopic.h"
StringTopic = "networktables/StringTopic.h"
Topic = "networktables/Topic.h"

ntcore_cpp = "ntcore_cpp.h"
ntcore_cpp_types = "ntcore_cpp_types.h"
