[build-system]
requires = [
    "robotpy-build<2023.0.0,>=2022.2.0",
    "wpilib<2023.0.0,>=2022.4.1.0",
]

[tool.robotpy-build]
base_package = "commands2"

[tool.robotpy-build.wrappers."commands2"]
name = "commands_v2"
extension = "_impl"
sources = [
    "commands2/src/main.cpp",
    "commands2/src/helpers.cpp",

    "commands2/src/cpp/frc2/command/button/Button.cpp",
    "commands2/src/cpp/frc2/command/button/NetworkButton.cpp",
    "commands2/src/cpp/frc2/command/button/Trigger.cpp",
    
    "commands2/src/cpp/frc2/command/CommandBase.cpp",
    "commands2/src/cpp/frc2/command/Command.cpp",
    "commands2/src/cpp/frc2/command/CommandGroupBase.cpp",
    "commands2/src/cpp/frc2/command/CommandScheduler.cpp",
    "commands2/src/cpp/frc2/command/CommandState.cpp",
    "commands2/src/cpp/frc2/command/ConditionalCommand.cpp",
    "commands2/src/cpp/frc2/command/FunctionalCommand.cpp",
    "commands2/src/cpp/frc2/command/InstantCommand.cpp",
    "commands2/src/cpp/frc2/command/MecanumControllerCommand.cpp",
    "commands2/src/cpp/frc2/command/NotifierCommand.cpp",
    "commands2/src/cpp/frc2/command/ParallelCommandGroup.cpp",
    "commands2/src/cpp/frc2/command/ParallelDeadlineGroup.cpp",
    "commands2/src/cpp/frc2/command/ParallelRaceGroup.cpp",
    "commands2/src/cpp/frc2/command/PerpetualCommand.cpp",
    "commands2/src/cpp/frc2/command/PIDCommand.cpp",
    "commands2/src/cpp/frc2/command/PIDSubsystem.cpp",
    "commands2/src/cpp/frc2/command/PrintCommand.cpp",
    "commands2/src/cpp/frc2/command/ProxyScheduleCommand.cpp",
    "commands2/src/cpp/frc2/command/RamseteCommand.cpp",
    "commands2/src/cpp/frc2/command/RunCommand.cpp",
    "commands2/src/cpp/frc2/command/ScheduleCommand.cpp",
    "commands2/src/cpp/frc2/command/SequentialCommandGroup.cpp",
    "commands2/src/cpp/frc2/command/StartEndCommand.cpp",
    "commands2/src/cpp/frc2/command/SubsystemBase.cpp",
    "commands2/src/cpp/frc2/command/Subsystem.cpp",
    "commands2/src/cpp/frc2/command/WaitCommand.cpp",
    "commands2/src/cpp/frc2/command/WaitUntilCommand.cpp",
]
depends = [
    "wpilib_core", "wpilibc_interfaces", "wpilibc",
    "wpimath_cpp", "wpimath_controls", "wpimath_geometry", "wpimath_filter",
    "wpimath_kinematics", "wpimath_spline",
    "wpiHal", "wpiutil", "ntcore",
]

extra_includes = [
    "commands2/src/include"
]

generate = [
    { Button = "frc2/command/button/Button.h" },
    { JoystickButton = "frc2/command/button/JoystickButton.h" },
    { NetworkButton = "frc2/command/button/NetworkButton.h" },
    { POVButton = "frc2/command/button/POVButton.h" },
    { Trigger = "frc2/command/button/Trigger.h" },

    { CommandBase = "frc2/command/CommandBase.h" },
    { CommandGroupBase = "frc2/command/CommandGroupBase.h" },
    { Command = "frc2/command/Command.h" },
    #{ CommandHelper = "frc2/command/CommandHelper.h" },
    { CommandScheduler = "frc2/command/CommandScheduler.h" },
    { CommandState = "frc2/command/CommandState.h" },
    { ConditionalCommand = "frc2/command/ConditionalCommand.h" },
    { FunctionalCommand = "frc2/command/FunctionalCommand.h" },
    { InstantCommand = "frc2/command/InstantCommand.h" },
    { MecanumControllerCommand = "frc2/command/MecanumControllerCommand.h" },
    { NotifierCommand = "frc2/command/NotifierCommand.h" },
    { ParallelCommandGroup = "frc2/command/ParallelCommandGroup.h" },
    { ParallelDeadlineGroup = "frc2/command/ParallelDeadlineGroup.h" },
    { ParallelRaceGroup = "frc2/command/ParallelRaceGroup.h" },
    { PerpetualCommand = "frc2/command/PerpetualCommand.h" },
    { PIDCommand = "frc2/command/PIDCommand.h" },
    { PIDSubsystem = "frc2/command/PIDSubsystem.h" },
    { PrintCommand = "frc2/command/PrintCommand.h" },
    { ProfiledPIDCommand = "frc2/command/ProfiledPIDCommand.h" },
    { ProfiledPIDSubsystem = "frc2/command/ProfiledPIDSubsystem.h" },
    { ProxyScheduleCommand = "frc2/command/ProxyScheduleCommand.h" },
    { RamseteCommand = "frc2/command/RamseteCommand.h" },
    { RunCommand = "frc2/command/RunCommand.h" },
    { ScheduleCommand = "frc2/command/ScheduleCommand.h" },
    # TODO
    # { SelectCommand = "frc2/command/SelectCommand.h" },
    { SequentialCommandGroup = "frc2/command/SequentialCommandGroup.h" },
    # { SetUtilities = "frc2/command/SetUtilities.h" },
    { StartEndCommand = "frc2/command/StartEndCommand.h" },
    { SubsystemBase = "frc2/command/SubsystemBase.h" },
    { Subsystem = "frc2/command/Subsystem.h" },
    # TODO
    { SwerveControllerCommand = "frc2/command/SwerveControllerCommand.h" },
    { TrapezoidProfileCommand = "frc2/command/TrapezoidProfileCommand.h" },
    { TrapezoidProfileSubsystem = "frc2/command/TrapezoidProfileSubsystem.h" },
    { WaitCommand = "frc2/command/WaitCommand.h" },
    { WaitUntilCommand = "frc2/command/WaitUntilCommand.h" },

    # Custom stuff
    { TimedCommandRobot = "src/TimedCommandRobot.h" },
]

generation_data = "gen"

[tool.robotpy-build.metadata]
name = "robotpy-commands-v2"
description = "WPILib command framework v2"
author = "RobotPy Development Team"
author_email = "robotpy@googlegroups.com"
url = "https://github.com/robotpy/robotpy-commands-v2"
license = "BSD-3-Clause"
install_requires = [
    "wpilib<2023.0.0,>=2022.4.1.0",
]
