[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "robotpy-commands-v2"
dynamic = ["version"]
description = "WPILib command framework v2"
readme = "README.md"
requires-python = ">=3.10"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
dependencies = [
    "wpilib<2027,>=2026.1.1b1",
    "typing_extensions>=4.1.0,<5",
]

[[project.authors]]
name = "RobotPy Development Team"
email = "robotpy@googlegroups.com"

[[project.maintainers]]
name = "RobotPy Development Team"
email = "robotpy@googlegroups.com"

[project.urls]
"Source code" = "https://github.com/robotpy/robotpy-commands-v2"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.sdist]
packages = ["commands2"]

[tool.hatch.build.targets.wheel]
packages = ["commands2"]