[build-system]
build-backend = "hatchling.build"
requires = [
    "semiwrap~=0.3.0",
    "hatch-meson~=0.1.2",
    "hatch-robotpy~=0.2.1",
    "hatchling",
    "robotpy-wpiutil==2027.0.0a4",
    "robotpy-wpinet==2027.0.0a4",
    "pyntcore==2027.0.0a4",
    # "numpy", # required for pybind11-stubgen to not complain, broken in raspbian CI
]

[project]
name = "robotpy-cscore"
version = "2027.0.0a4"
description = "RobotPy bindings for cscore image processing library"
authors = [
    {name = "RobotPy Development Team", email = "robotpy@googlegroups.com"},
]
license = "BSD-3-Clause"
dependencies = [
    "robotpy-wpiutil==2027.0.0a4",
    "robotpy-wpinet==2027.0.0a4",
    "pyntcore==2027.0.0a4",
]

[project.urls]
"Source code" = "https://github.com/robotpy/mostrobotpy"

[tool.hatch.build.targets.wheel]
packages = ["cscore"]

[tool.hatch.build.hooks.robotpy]
version_file = "cscore/version.py"

#
# cscore is different -- we download everything as a static library
# and don't include them in the wheel to avoid OpenCV symbol conflicts
#


[[tool.hatch.build.hooks.robotpy.maven_lib_download]]
artifact_id = "cscore-cpp"
group_id = "org.wpilib.cscore"
repo_url = "https://frcmaven.wpi.edu/artifactory/development-2027"
version = "2027.0.0-alpha-4-71-gdfc8098b9"

staticlibs = ["cscore"]
extract_to = "lib"

[[tool.hatch.build.hooks.robotpy.maven_lib_download]]
artifact_id = "cameraserver-cpp"
group_id = "org.wpilib.cameraserver"
repo_url = "https://frcmaven.wpi.edu/artifactory/development-2027"
version = "2027.0.0-alpha-4-71-gdfc8098b9"

staticlibs = ["cameraserver"]
extract_to = "lib"

[[tool.hatch.build.hooks.robotpy.maven_lib_download]]
artifact_id = "opencv-cpp"
group_id = "edu.wpi.first.thirdparty.frc2025.opencv"
repo_url = "https://frcmaven.wpi.edu/artifactory/release"
version = "4.10.0-3"

staticlibs = ["opencv4100"]
extract_to = "lib"


[tool.hatch.build.hooks.semiwrap]

[tool.hatch.build.hooks.meson]


[tool.semiwrap]
update_init = [
    "cscore"
]

scan_headers_ignore = [
    # Only wrapping the C++ API
    "wpi/cs/cscore.h",
    "wpi/cs/cscore_c.h",
    "wpi/cs/cscore_raw.h",

    # Not needed
    "wpi/cameraserver/CameraServerShared.hpp",
    "wpi/vision/VisionPipeline.hpp",
    "wpi/vision/VisionRunner.hpp",

    # Not wrapping OpenCV or cvnp
    "cvnp/*",
    "opencv2/*"
]

[tool.semiwrap.extension_modules."cscore._cscore"]
name = "cscore"

depends = ["wpiutil", "wpinet", "ntcore", "cscore-casters"]
includes = [
    "lib/include"
]

[tool.semiwrap.extension_modules."cscore._cscore".headers]
# cameraserver
CameraServer = "wpi/cameraserver/CameraServer.hpp"

# cscore
cscore_cpp = "wpi/cs/cscore_cpp.hpp"
cscore_runloop = "wpi/cs/cscore_runloop.hpp"

CvSink = "wpi/cs/CvSink.hpp"
CvSource = "wpi/cs/CvSource.hpp"
HttpCamera = "wpi/cs/HttpCamera.hpp"
ImageSink = "wpi/cs/ImageSink.hpp"
ImageSource = "wpi/cs/ImageSource.hpp"
MjpegServer = "wpi/cs/MjpegServer.hpp"
RawEvent = "wpi/cs/RawEvent.hpp"
UsbCamera = "wpi/cs/UsbCamera.hpp"
UsbCameraInfo = "wpi/cs/UsbCameraInfo.hpp"
VideoCamera = "wpi/cs/VideoCamera.hpp"
VideoEvent = "wpi/cs/VideoEvent.hpp"
VideoListener = "wpi/cs/VideoListener.hpp"
VideoMode = "wpi/cs/VideoMode.hpp"
VideoProperty = "wpi/cs/VideoProperty.hpp"
VideoSink = "wpi/cs/VideoSink.hpp"
VideoSource = "wpi/cs/VideoSource.hpp"

[tool.semiwrap.export_type_casters.cscore-casters]
pypackage = "cscore"
includedir = ["cscore"]

[[tool.semiwrap.export_type_casters.cscore-casters.headers]]
header = "cvnp/cvnp.h"
types = ["cv::Mat"]
